Coded left hand UI logic

--- a/Strange Calculator/Base.lproj/Main.storyboard
+++ b/Strange Calculator/Base.lproj/Main.storyboard
@@ -1345,7 +1345,14 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="38" id="BpF-74-0d6"/>
                                 </constraints>
-                                <attributedString key="attributedText"/>
+                                <attributedString key="attributedText">
+                                    <fragment content="0">
+                                        <attributes>
+                                            <font key="NSFont" size="36" name="Monaco"/>
+                                            <paragraphStyle key="NSParagraphStyle" alignment="right" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                        </attributes>
+                                    </fragment>
+                                </attributedString>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Cgd-gN-elm" userLabel="ButtonHand">
